@@ -1,3 +1,9 @@
+python-dynamic-table (0.8.6-%DIST%1) %DIST%; urgency=low
+
+  * Fixed minor bug where a non-string in a row can break rendering
+
+ -- Dan Farnsworth <absltkaos@gmail.com>  Fri, 30 Jan 2015 07:00:00 -0700
+
 python-dynamic-table (0.8.5-%DIST%1) %DIST%; urgency=low
 
   * Feature: Support a not contains operator for TableFilters '!/'
